--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 						<div class="card-body"  style="background-color: rgb(255, 255, 255); border-radius: 0 0 1rem 1rem;">
 							<h5 class="card-title">Discord BOT</h5>
 							<p class="card-text">Discord bot for the server with additional unusual features. Main development language: Python</p>
-							<a href="https://github.com/EternalB-1/DiscordBot" class="btn btn-primary">GitHub</a>
+							<a href="https://github.com/EternalB-1/DiscordBot" class="btn btn-primary" style="cursor: url(img/Hand.cur), pointer;">GitHub</a>
 						</div>
 					</div>
 				</div>
@@ -162,7 +162,7 @@
 						<div class="card-body"  style="background-color: rgb(255, 255, 255); border-radius: 0 0 1rem 1rem;">
 							<h5 class="card-title">Seeker</h5>
 							<p class="card-text">A script for hosting a website that transmits some info. Main development languages: Python, HTML, CSS, JS</p>
-							<a href="https://github.com/EternalB-1/seeker" class="btn btn-primary">GitHub</a>
+							<a href="https://github.com/EternalB-1/seeker" class="btn btn-primary" style="cursor: url(img/Hand.cur), pointer;">GitHub</a>
 						</div>
 					</div>
 				</div>
@@ -172,7 +172,7 @@
 						<div class="card-body"  style="background-color: rgb(255, 255, 255); border-radius: 0 0 1rem 1rem;">
 							<h5 class="card-title">ZIP brute force</h5>
 							<p class="card-text">Bruteforce zip archives according to a list of special passwords. Main development language: Python</p>
-							<a href="https://github.com/EternalB-1/BruteZIP" class="btn btn-primary">GitHub</a>
+							<a href="https://github.com/EternalB-1/BruteZIP" class="btn btn-primary" style="cursor: url(img/Hand.cur), pointer;">GitHub</a>
 						</div>
 					</div>
 				</div>
@@ -184,7 +184,7 @@
 						<div class="card-body"  style="background-color: rgb(255, 255, 255); border-radius: 0 0 1rem 1rem;">
 							<h5 class="card-title">Raspberry PI scripts</h5>
 							<p class="card-text">Scripts for automating standard and custom processes on Raspberry Pi 4 model B. Main development language: Python</p>
-							<a href="https://github.com/EternalB-1/rf_ru" class="btn btn-primary">GitHub</a>
+							<a href="https://github.com/EternalB-1/rf_ru" class="btn btn-primary" style="cursor: url(img/Hand.cur), pointer;">GitHub</a>
 						</div>
 					</div>
 				</div>
@@ -194,7 +194,7 @@
 						<div class="card-body"  style="background-color: rgb(255, 255, 255); border-radius: 0 0 1rem 1rem;">
 							<h5 class="card-title">This Web-site</h5>
 							<p class="card-text">The site you are on was written by me personally as a portfolio. Main development languages: HTML, CSS, JS</p>
-							<a href="#github" class="btn btn-primary">Are you here!</a>
+							<a href="#github" class="btn btn-primary" style="cursor: url(img/Hand.cur), pointer;">Are you here!</a>
 						</div>
 					</div>
 				</div>
@@ -204,7 +204,7 @@
 						<div class="card-body"  style="background-color: rgb(255, 255, 255); border-radius: 0 0 1rem 1rem;">
 							<h5 class="card-title">Discord BOT crasher</h5>
 							<p class="card-text">One of the bots that is a trap. Anyone can do whatever they want on the server! Main development language: Python</p>
-							<a href="https://github.com/EternalB-1/discord-crasher_ru" class="btn btn-primary">GitHub</a>
+							<a href="https://github.com/EternalB-1/discord-crasher_ru" class="btn btn-primary" style="cursor: url(img/Hand.cur), pointer;">GitHub</a>
 						</div>
 					</div>
 				</div>
