--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<div class="col"><img src="img/tomsk.jpg" class="imll"></div>
 		</div>
 		<div class="row close" id="abib">
-			<div class="col"><img src="img/ltpu.jpg" class="imr"></div>
+			<div class="col"><img src="img/tsu.jpg" class="imr"></div>
 			<div class="col txtl">Study at the lyceum at TPU</div>
 		</div>
 		<div class="row close" id="abic">
