--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<h4 id="ai">I am a web developer based in Tomsk creating stunning and effective visuals for companies around the world. Let's start scrolling and find out more about me.</h4>
 		</div>
 		<div id="icons" class="container">
-			<a class="btn-link" href="https://vk.com/scif_tom"><i class="fab fa-3x fa-vk" style="color: black;"></i></a>
+			<a class="btn-link" href="https://vk.com/eternalb_1"><i class="fab fa-3x fa-vk" style="color: black;"></i></a>
 			<a class="btn-link" href="https://tele.click/GxM6S"><i id="icon" class="fab fa-3x fa-telegram"></i></a>
 			<a class="btn-link" href="https://wa.me/89832330785"><i id="icon" class="fab fa-3x fa-whatsapp"></i></a>
 		</div>	
