--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		</div>
 		<div class="row close" id="abib">
 			<div class="col"><img src="img/tsu.jpg" class="imr"></div>
-			<div class="col txtl">Study at the lyceum at TPU</div>
+			<div class="col txtl">Study at TSU</div>
 		</div>
 		<div class="row close" id="abic">
 			<div class="col txtt">I am fond of snowboarding</div>
