--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 		</div>
 		<div id="icons" class="container">
 			<a class="btn-link" href="https://vk.com/eternalb_1"><i class="fab fa-3x fa-vk" style="color: black;"></i></a>
-			<a class="btn-link" href="https://tele.click/GxM6S"><i id="icon" class="fab fa-3x fa-telegram"></i></a>
-			<a class="btn-link" href="https://wa.me/89832330785"><i id="icon" class="fab fa-3x fa-whatsapp"></i></a>
+			<a class="btn-link" href="https://tele.click/eternalb_1"><i id="icon" class="fab fa-3x fa-telegram"></i></a>
+			<a class="btn-link" href="https://wa.me/+79832330785"><i id="icon" class="fab fa-3x fa-whatsapp"></i></a>
 		</div>	
 	</section>
 	<section id="aboutme">
